{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 480,
  "lineage": "49c43c2c-caa3-5544-783d-2c4cd60fdedc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd9d920105b6ab3f",
            "domain": "vpc",
            "id": "eipalloc-0dd9d920105b6ab3f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-193-129-212.compute-1.amazonaws.com",
            "public_ip": "44.193.129.212",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform VPC"
            },
            "tags_all": {
              "Name": "terraform VPC"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04902260ca3d33422",
            "arn": "arn:aws:ec2:us-east-1:923726674622:instance/i-0da2d981bd6917c52",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da2d981bd6917c52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05e65ec04bf77d331",
            "private_dns": "ip-10-0-1-45.ec2.internal",
            "private_ip": "10.0.1.45",
            "public_ip": "3.237.23.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d1ce3f85761b2812",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066923b401c77a562",
            "tags": {
              "Name": "terraform EC2 instance"
            },
            "tags_all": {
              "Name": "terraform EC2 instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-051f11f99415023ab"
            ]
          },
          "dependencies": [
            "aws_network_acl.main",
            "aws_security_group.tf_security_group",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.aws-datasource"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:internet-gateway/igw-0f6d44c83f76cfd86",
            "id": "igw-0f6d44c83f76cfd86",
            "owner_id": "923726674622",
            "tags": {
              "Name": "terraform internet gateway"
            },
            "tags_all": {
              "Name": "terraform internet gateway"
            },
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dd9d920105b6ab3f",
            "connectivity_type": "public",
            "id": "nat-02f7ac52743997423",
            "network_interface_id": "eni-03ea968a42e94f4f0",
            "private_ip": "10.0.10.4",
            "public_ip": "44.193.129.212",
            "subnet_id": "subnet-05fd2cf520c9ff767",
            "tags": {
              "Name": "terraform - NAT"
            },
            "tags_all": {
              "Name": "terraform - NAT"
            }
          },
          "dependencies": [
            "aws_eip.NAT-EIP",
            "aws_internet_gateway.gw",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:network-acl/acl-031b85ce3cb89f59b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 200,
                "to_port": 0
              }
            ],
            "id": "acl-031b85ce3cb89f59b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "923726674622",
            "subnet_ids": [
              "subnet-05fd2cf520c9ff767",
              "subnet-066923b401c77a562"
            ],
            "tags": {
              "Name": "terraform main"
            },
            "tags_all": {
              "Name": "terraform main"
            },
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:route-table/rtb-0a21e9b74eb222d83",
            "id": "rtb-0a21e9b74eb222d83",
            "owner_id": "923726674622",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f7ac52743997423",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrafom private route table"
            },
            "tags_all": {
              "Name": "terrafom private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT-EIP",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:route-table/rtb-091e2632afeaa36b3",
            "id": "rtb-091e2632afeaa36b3",
            "owner_id": "923726674622",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6d44c83f76cfd86",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terrafom public route table"
            },
            "tags_all": {
              "Name": "terrafom public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068f48490e9f0b5f9",
            "route_table_id": "rtb-0a21e9b74eb222d83",
            "subnet_id": "subnet-05fd2cf520c9ff767"
          },
          "dependencies": [
            "aws_eip.NAT-EIP",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a18290f57c43dcf8",
            "route_table_id": "rtb-091e2632afeaa36b3",
            "subnet_id": "subnet-066923b401c77a562"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_route_table",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:security-group/sg-051f11f99415023ab",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051f11f99415023ab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Key",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform sg",
            "name_prefix": "",
            "owner_id": "923726674622",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform SG"
            },
            "tags_all": {
              "Name": "terraform SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-05fd2cf520c9ff767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-05fd2cf520c9ff767",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923726674622",
            "tags": {
              "Name": "terraform_private vpc"
            },
            "tags_all": {
              "Name": "terraform_private vpc"
            },
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:subnet/subnet-066923b401c77a562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-066923b401c77a562",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "923726674622",
            "tags": {
              "Name": "terraform_public vpc"
            },
            "tags_all": {
              "Name": "terraform_public vpc"
            },
            "vpc_id": "vpc-06057925411da0a9f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:923726674622:vpc/vpc-06057925411da0a9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-010d80abc99722fa7",
            "default_route_table_id": "rtb-0d437dd2e0be942cd",
            "default_security_group_id": "sg-05758c57c117f1f46",
            "dhcp_options_id": "dopt-01e5e3a2f15a8f702",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06057925411da0a9f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d437dd2e0be942cd",
            "owner_id": "923726674622",
            "tags": {
              "Name": "terraform VPC"
            },
            "tags_all": {
              "Name": "terraform VPC"
            }
          }
        }
      ]
    }
  ]
}